# spartan

./: .gitignore  Cargo.toml
apps/: README.md
apps/RustBenchmarkApp/Resources/: rsa.wtns
apps/RustBenchmarkApp/RustBenchmarkApp/: AppDelegate.swift  RustBenchmarkApp-Bridging-Header.h  RustBridge.h  SceneDelegate.swift  ViewController.swift
apps/RustBenchmarkApp/RustBenchmarkApp.xcodeproj/: project.pbxproj
apps/RustBenchmarkApp/RustBenchmarkApp.xcodeproj/project.xcworkspace/xcuserdata/turboblitz.xcuserdatad/: UserInterfaceState.xcuserstate
apps/RustBenchmarkApp/RustBenchmarkApp.xcodeproj/xcuserdata/turboblitz.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/RustBenchmarkApp/RustBenchmarkApp/RustBenchmarkApp.xcdatamodeld/: .xccurrentversion
apps/RustBenchmarkApp/RustBenchmarkApp/rust_lib/: Cargo.toml
apps/RustBenchmarkApp/RustBenchmarkApp/rust_lib/src/: lib.rs  nizk.rs
apps/android/: build.gradle  settings.gradle
apps/android/app/: build.gradle
apps/android/app/src/androidTest/java/com/example/rustbenchmarkapp/: ExampleInstrumentedTest.kt
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/example/rustbenchmarkapp/: MainActivity.kt
apps/android/app/src/main/res/layout/: activity_main.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/main/res/values-night/: themes.xml
apps/android/app/src/test/java/com/example/rustbenchmarkapp/: ExampleUnitTest.kt
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/android/rust_lib/: Cargo.toml
apps/android/rust_lib/src/: lib.rs  nizk.rs
benches/: nizk.rs
examples/: README.md  cubic.rs  nizk.rs  nizk_with_reader.rs
examples/vc_and_disclose/: vc_and_disclose.r1cs  vc_and_disclose.wtns
src/: circom_reader.rs  commitments.rs  group.rs  lib.rs
src/scalar/: mod.rs
