[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
libspartan = { path = "../../..", default-features = false }
merlin = "3.0.0"
jni = "0.21.1"

[profile.release]
panic = "abort"

[features]
default = []
android = ["libspartan/android"]